--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,12 @@ on:
       - "lib/**"
       - "tests/**"
     tags-ignore:
-      - '**'
+      - "**"
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
   build_and_test:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -23,20 +22,30 @@ jobs:
         node-version: [14]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: run npm install
-      run: npm install
-    - name: check lint
-      run: npm run lint
-    - name: run tests
-      run: npm test
-    - name: gitleaks-action
-      run: |
-        brew install gitleaks
-        gitleaks --verbose detect --log-opts --since="2021-11-25"
-  
-  
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: run npm install
+        run: npm install
+      - name: check lint
+        run: npm run lint
+      - name: run tests
+        run: npm test
+
+  gitleaks:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Add Homebrew to $PATH
+        run: echo "/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin" >> $GITHUB_PATH
+
+      - uses: actions/checkout@v3
+
+      - name: Install GitLeaks
+        run: |
+          brew install gitleaks
+
+      - name: gitleaks-action
+        run: |
+          gitleaks --verbose detect --log-opts --since="2021-11-25"
