--- a/.github/workflows/pull-request-code-review.yml
+++ b/.github/workflows/pull-request-code-review.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
+        with: 
+            repository: levyitay/mobile-api-lib-js
+            path: mobile-api-lib-js
 
       - name: AI Code Reviewer
         uses: levyitay/mobile-api-lib-js@main
