fix(ai-code-review): fixing action

--- a/.github/workflows/pull-request-code-review.yml
+++ b/.github/workflows/pull-request-code-review.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-
+        with:
+          path: ${{ github.repository }}
       - name: AI Code Reviewer
         uses: levyitay/mobile-api-lib-js@main
         with:
