--- a/.github/workflows/pull-request-code-review.yml
+++ b/.github/workflows/pull-request-code-review.yml
@@ -10,6 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: ${{ github.repository }}
+      - name: AI Code Reviewer
+        uses: freeedcom/ai-codereviewer@v2.4.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          exclude: "**/*.json, **/*.md"
